<resources>
    <string name="app_name">Secret</string>
    <string name="setting_user_login_name">请输入登录名</string>
    <string name="setting_user_your_pwd">请输入验证码</string>
    <string name="setting_user_forgot_pwd">忘记密码</string>
    <string name="setting_user_login">登录</string>
    <string name="publish_message">发表消息</string>
    <string name="get_code">获取验证码</string>
    <string name="phone_num_can_not_be_empty">电话号码不能为空</string>
    <string name="code_can_not_be_empty">验证码不能为空</string>
    <string name="fail_to_get_code">获取验证码失败</string>
    <string name="success_to_get_code">获取验证码成功，请检查你的短信</string>
    <string name="conncting">获取验证码中</string>
    <string name="connect_server">正在获取验证码，请稍后</string>
    <string name="fail_to_login">登录失败，请稍后重试</string>
    <string name="fail_to_load_timeline">消息加载失败，请稍后重试</string>
</resources>
